// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.appmanager.sessions;

import "google/protobuf/empty.proto";
import "apis/app-manager/sessions/app_session_info.proto";

option go_package = "personal-website-v2/go-apis/app-manager/sessions;sessions";

// Proto file describing the App session service.

// The app session service definition.
service AppSessionService {
    // Creates and starts an app session for the specified app
	// and returns app session ID if the operation is successful.
    rpc CreateAndStart(CreateAndStartRequest) returns (CreateAndStartResponse) {}

    // Terminates an app session by the specified app session ID.
    rpc Terminate(TerminateRequest) returns (google.protobuf.Empty) {}

    // Gets app session info by the specified app session ID.
    rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
}

// Request message for 'AppSessionService.CreateAndStart'.
message CreateAndStartRequest {
    // The app ID.
    uint64 app_id = 1;
}

// Response message for 'AppSessionService.CreateAndStart'.
message CreateAndStartResponse {
    // The app session ID.
    uint64 id = 1;
}

// Request message for 'AppSessionService.Terminate'.
message TerminateRequest {
    // The app session ID.
    uint64 id = 1;
}

// Request message for 'AppSessionService.GetById'.
message GetByIdRequest {
    // The app session ID.
    uint64 id = 1;
}

// Response message for 'AppSessionService.GetById'.
message GetByIdResponse {
    // The app session info.
    AppSessionInfo info = 1;
}
